--- a/tehnomart/css/style.css
+++ b/tehnomart/css/style.css
@@ -15,53 +15,49 @@ section, div{
 	margin: 0 auto;
 	width: 960px;
 }
-.clearfix::after {
-    content: "";
-    display: table;
-    clear: both;
-}
 /*Шапка сайта*/
 .main-header{
 	padding-bottom: 60px;
+}
+.header-container{
+	display: flex;
+	justify-content: space-between;
 }
 .header-top, .header-middle{
 	margin-bottom: 45px;
 }
 .header-logo{
-	float: left;
 	width: 220px;
 }
 .search{
-	float: left;
 	width: 170px;
 }
 .marker{
-	float: right;
+	margin-left: auto;
 	width: 140px;
 }
 .cart{
-	float: right;
 	width: 140px;
 }
 .orders-btn{
-	float: right;
 	width: 150px;
 }
 .italic-top{
 	width: 300px;
-	float: left;
-	margin-right: 20px;
 }
 .header-contact{
 	width: 300px;
-	float: left;
 }
 .user-block{
 	width: 300px;
-	float: right;
 }
 .header-nav{
-	font-size: 0;
+	width: 100%;
+}
+.header-nav ul{
+	padding: 0;
+	display: flex;
+	justify-content: space-around;
 }
 .header-bottom .header-nav li{
 	font-size: 14px;
@@ -69,29 +65,29 @@ section, div{
 }
 /*Содержимое сайта*/
 .properties-top{
-	font-size: 0;
+	display: flex;
+	justify-content: space-between;
 	margin-bottom: 20px;
 	margin-top: 60px;
 }
 .properties-item{
-	display: inline-block;
 	width: 300px;
 	font-size: 14px;
-	margin-right: 20px;
 }
-.properties-top .item-3{
-	margin-right: 0;
+.properties-bottom{
+	display: flex;
+	justify-content: space-between;
 }
 .popular-type{
+	display: flex;
+	justify-content: space-between;
 	margin-top: 60px;
 	margin-bottom: 20px;
 }	
 .slider{
-	float: left;
 	width: 620px;
 }
 .properties-list{
-	float: right;
 	width: 300px;
 }
 .properties-list .properties-item{
@@ -101,32 +97,23 @@ section, div{
 	padding: 25px;
 }
 .popular-type h2{
-	float: left;
 	margin: 0;
 }
-.popular-type a{
-	float: right;
-}
 .product-item{
-	display: inline-block;
 	width: 220px;
-	margin-right: 20px;
-	font-size: 14px;
 }
 .popular-product{
-	font-size: 0;
-}
-.product-item:last-child{
-	margin-right: 0;
+	display: flex;
+	justify-content: space-between;
 }
 .brands-item{
-	display: inline-block;
 	width: 220px;
 	outline: 1px solid #000;
-	margin-right: 20px;
 }
 .brands-list{
-	font-size: 0;
+	display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 	margin-bottom: 85px;
 }
 .brands-item:nth-child(4n){
@@ -135,21 +122,24 @@ section, div{
 .service{
 	padding: 60px 0;
 }
+.tabs{
+	display: flex;
+}
 .tabs-nav{
-	float: left;
 	width: 240px;
 	margin-right: 60px;
 }
 .tab-container{
-	float: left;
 	width: 300px;
 }
+.information{
+	display: flex;
+	justify-content: space-between;
+}
 .about-us{
-	float: left;
 	width: 540px;
 }
 .contact{
-	float: right;
 	width: 300px;
 }
 .breadcrumbs{
@@ -161,20 +151,24 @@ section, div{
 }
 .filter{
 	width: 220px;
-	float: left;
 }
 .filter label{
 	display: block;	
 }
 .main-content{
-	float: right;
 	width:700px;
 }
-.catalog-product{
-	font-size: 0;
+.contents{
+	display: flex;
+	justify-content: space-between;
 }
-.catalog-product .product-item:nth-child(3n){
-	margin-right: 0;
+.catalog-product{
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+}
+.product-item{
+	margin-bottom: 20px;
 }
 .pagination{
 	font-size: 0;
@@ -184,39 +178,27 @@ section, div{
 	font-size: 14px;
 }
 /*Подвал сайта*/
+.footer-container{
+	display: flex;
+	justify-content: space-between;
+}
 .footer-logo{
 	width: 220px;
 }
-.footer-left{
-	float: left;
-}
-.footer-right{
-	float: right;
-}
 .nav-footer-1,.nav-footer-2{
-	float: right;
 	font-size: 0;
 }
 .nav-footer-1 li, .nav-footer-2 li{
 	display: inline-block;
 	font-size: 14px;
 }
-.footer-middle .adress{
-	float: left;
-}
 .footer-copyright{
 	width: 240px;
-	float: left;
-	margin-right: 140px;
+	margin-right: 100px;
 }
 .footer-social{
 	width: 240px;
-	float: left;
 	margin-right: 20px;
-}
-.email, .footer-developer{
-	margin-right: 20px;
-	float: left;
 }
 .main-footer{
 	margin-top: 90px;
