--- a/barbershop/css/style.css
+++ b/barbershop/css/style.css
@@ -11,7 +11,7 @@ body{
     font-size: 14px;
 }
 .main-page{
-    background: url("/img/main-background.jpg") #070707 no-repeat;
+    background: url("../img/main-background.jpg") #070707 no-repeat;
     color: #fff;
 }
 .container{
@@ -77,7 +77,7 @@ body{
     width: 14px;
     height: 14px;
     display: block;
-    background: url(/img/icons.png);
+    background: url(../img/icons.png);
     background-position: 0px -82px;
     position: absolute;
     left: 25px;
@@ -525,22 +525,22 @@ figure,p{
     background: #000;
 }
 .social-btn-vk{
-    background: rgb(0, 0, 0) url(/img/vk.png) no-repeat center;
+    background: rgb(0, 0, 0) url(../img/vk.png) no-repeat center;
 }
 .social-btn-vk:hover{
-    background: rgb(255, 255, 255) url(/img/vk_b.png) no-repeat center;
+    background: rgb(255, 255, 255) url(../img/vk_b.png) no-repeat center;
 }
 .social-btn-fb{
-    background: rgb(0, 0, 0) url(/img/facebook.png) no-repeat center;
+    background: rgb(0, 0, 0) url(../img/facebook.png) no-repeat center;
 }
 .social-btn-inst{
-    background: rgb(0, 0, 0) url(/img/instagram.png) no-repeat center;
+    background: rgb(0, 0, 0) url(../img/instagram.png) no-repeat center;
 }
 .social-btn-fb:hover{
-    background: rgb(255, 255, 255) url(/img/facebook_b.png) no-repeat center;
+    background: rgb(255, 255, 255) url(../img/facebook_b.png) no-repeat center;
 }
 .social-btn-inst:hover{
-    background: rgb(255, 255, 255) url(/img/instagram_b.png) no-repeat center;
+    background: rgb(255, 255, 255) url(../img/instagram_b.png) no-repeat center;
 }
 .footer-copyright p{
     margin-bottom: 20px;
