--- a/barbershop/css/style.css
+++ b/barbershop/css/style.css
@@ -9,6 +9,7 @@ body{
     font-weight: bold;
     text-transform: uppercase;
     font-size: 14px;
+    position: relative;
 }
 .main-page{
     background: url("../img/main-background.jpg") #070707 no-repeat;
@@ -29,9 +30,12 @@ body{
     justify-content: space-between;
 }
 .header-logo{
-    width: 140px;
+    width: 151px;
     display: flex;
     align-items: center;
+}
+.header-logo a{
+    margin-left: 20px;
 }
 .main-navigation{
     width: 700px;
@@ -131,6 +135,7 @@ body{
     justify-content: space-between;
     padding: 45px 80px;
     margin-bottom: 36px;
+    padding-bottom: 50px;
 }
 .list-news li{
     margin-bottom: 25px;
@@ -138,12 +143,14 @@ body{
 .index-content ul{
     padding: 0;
     list-style: none;
+    margin-bottom: 32px;
 }
 .index-content a{
     text-decoration: none;
     color: #000;
     font-size: 14px;
-    line-height: 24px;
+    line-height: 25px;
+    letter-spacing: 0.1px;
 }
 .index-content time{
     display: block;
@@ -187,13 +194,32 @@ a.btn{
 .gallery-content{
     line-height: 0;
     border: 7px solid rgb(255, 255, 255);
-    margin-bottom: 35px;
+    margin-bottom: 38px;
+    margin-top: 22px;
+}
+.gallery .btn{
+    width: 140px;
+    padding: 13px 33px;
 }
 .contact-info{
     padding-right: 35px;
 }
+.contact-info .txt-caption{
+    line-height: 40px;
+    letter-spacing: 0.2px;
+}
 .contact-info p{
-    margin-bottom: 30px;
+    margin-bottom: 20px;
+    line-height: 24px;
+}
+.contact-info .btn-group{
+    padding-right: 45px;
+    margin-top: 22px;
+}
+.contact-info .btn{
+    width: 140px;
+    padding: 10px 0;
+    text-align: center;
 }
 .index-content-right{
     width: 300px;
@@ -220,8 +246,8 @@ a.btn{
 .breadcrumbs ul li:after{
     content: "";
     display: block;
-    width: 10px;
-    height: 10px;
+    width: 8px;
+    height: 8px;
     background: #000;
     transform: rotate(45deg);
     position: absolute;
@@ -239,6 +265,9 @@ a.btn{
 .product-img img, .img-prev img{
     box-shadow: 0 0 15px rgba(0, 1, 1, 0.2);
     margin-bottom: 20px;
+}
+.product-cart .btn-buy{
+    text-align: left;
 }
 .btn-buy{
     text-align: center;
@@ -277,8 +306,8 @@ a.btn{
 .kit-list li::before{
     content: "";
     display: block;
-    width: 10px;
-    height: 10px;
+    width: 8px;
+    height: 8px;
     background: #000;
     transform: rotate(45deg);
     position: absolute;
@@ -388,7 +417,83 @@ a.btn{
     width: 220px;
 }
 .sidebar label{
+    position: relative;
     display: block;
+    padding: 9px 0;
+    padding-left: 45px;
+    
+}
+.sidebar fieldset{
+    border:none;
+}
+.sidebar legend{
+    font-size: 21px;
+}
+
+.chbx-label{
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    border: 2px solid #000;
+    top: 10px;
+    left: 0;
+}
+.rd-label{
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    border: 2px solid #000;
+    top: 10px;
+    left: 0;
+    border-radius: 50%;
+}
+.sidebar input{
+    display: none;
+}
+
+.sidebar #brand-1:checked ~ label[for="brand-1"] .chbx-label::before, 
+.sidebar #brand-1:checked ~ label[for="brand-1"] .chbx-label::after,
+.sidebar #brand-2:checked ~ label[for="brand-2"] .chbx-label::before, 
+.sidebar #brand-2:checked ~ label[for="brand-2"] .chbx-label::after,
+.sidebar #brand-3:checked ~ label[for="brand-3"] .chbx-label::before, 
+.sidebar #brand-3:checked ~ label[for="brand-3"] .chbx-label::after,
+.sidebar #brand-4:checked ~ label[for="brand-4"] .chbx-label::before, 
+.sidebar #brand-4:checked ~ label[for="brand-4"] .chbx-label::after,
+.sidebar #brand-5:checked ~ label[for="brand-5"] .chbx-label::before, 
+.sidebar #brand-5:checked ~ label[for="brand-5"] .chbx-label::after,
+.sidebar #brand-6:checked ~ label[for="brand-6"] .chbx-label::before, 
+.sidebar #brand-6:checked ~ label[for="brand-6"] .chbx-label::after{
+    content: "";
+    display: block;
+    width: 16px;
+    height: 2px;
+    background: #000;
+    position: absolute;
+    transform: rotate(45deg);
+    top: 7px;
+    left: 0;
+    border-radius: 3px;
+}
+.sidebar #brand-1:checked ~ label[for="brand-1"] .chbx-label::after,
+.sidebar #brand-2:checked ~ label[for="brand-2"] .chbx-label::after,
+.sidebar #brand-3:checked ~ label[for="brand-3"] .chbx-label::after,
+.sidebar #brand-4:checked ~ label[for="brand-4"] .chbx-label::after,
+.sidebar #brand-5:checked ~ label[for="brand-5"] .chbx-label::after,
+.sidebar #brand-6:checked ~ label[for="brand-6"] .chbx-label::after{
+    transform: rotate(-45deg);
+}
+.sidebar #gr-1:checked ~ label[for="gr-1"] .rd-label::before,
+.sidebar #gr-3:checked ~ label[for="gr-3"] .rd-label::before,
+.sidebar #gr-2:checked ~ label[for="gr-2"] .rd-label::before{
+    content: "";
+    display: block;
+    position: absolute;
+    width: 8px;
+    height: 8px;
+    background: #000;
+    border-radius: 50%;
+    top: 4px;
+    left: 4px;
 }
 .products{
     width: 700px;
@@ -442,7 +547,7 @@ figure,p{
 }
 .appointment-form input{
     width: 100%;
-    padding: 7px 15px;
+    padding: 12px 15px;
     border: 2px solid #000;
     background: #f9f6f3;
 }
@@ -451,15 +556,23 @@ figure,p{
     outline: none;
 }
 .appointment-form .form-item{
-    width: 48%;
+    width: 140px;
+    margin-bottom: 12px;
 }
 .form-block{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    margin: 20px 0;
+    margin: 24px 0;
+    margin-bottom: 7px;
 }
-
+.form-block label{
+    margin-bottom: 10px;
+    margin-left: 18px;
+}
+.appointment-form .btn{
+    line-height: 24px;
+}
 .price-table{
     width: 100%;
     border: 2px solid black;
@@ -503,10 +616,17 @@ figure,p{
 }
 .footer-contacts{
     width: 320px;
-    margin-right: 60px;
+    margin-right: 63px;
+}
+.footer-contacts p{
+    margin-bottom: 7px;
 }
 .footer-social{
     width: 180px;
+    text-align: center
+}
+.footer-social p{
+    margin-bottom: 4px;
 }
 .social-btn{
     font-size: 0;
@@ -516,10 +636,16 @@ figure,p{
 }
 .footer-contacts a{
     color: #fff;
+    display: block;
+    margin-bottom: 7px;
 }
 .footer-copyright{
     margin-left: auto;
-    width: 180px;
+    text-align: center;
+    width: 140px;
+}
+.footer-copyright .btn{
+    padding: 10px 20px;
 }
 .footer .social-btn{
     background: #000;
@@ -551,10 +677,107 @@ figure,p{
 }
 /*Всплывающие окна*/
 .login-form{
-    width: 300px;
+    width:460px;
     margin: 0 auto;
+    background: #fff;
+    padding: 60px 80px;
+    color: #000;
+    position: fixed;
+    z-index: 3;
+    top:50px;
+    left:50%;
+    margin-left: -230px;
+    
+}
+.login-form p{
+    margin-bottom: 15px;
+}
+.login-form input{
+    border: 2px solid #000;
+    width: 300px;
+    margin-bottom: 9px;
+    line-height: 39px;
+    padding-left: 15px;
+    font-size: 14px;
+    font-weight: bold;
+}
+.login-save{
+    margin: 15px 0;
+    display: flex;
+    justify-content: space-between;
+}
+.login-save input{
+    display: none;
+}
+.login-save label{
+    padding-left: 30px;
+    position: relative;
+}
+.login-save .form-chbx{
+    content: "";
+    display: block;
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    border: 2px solid #000;
+    top: 0;
+    left: 0;
+
+}
+.login-save a{
+    color:#000;
+}
+.login-save #save-me:checked ~ label[for="save-me"] .form-chbx::before,
+.login-save #save-me:checked ~ label[for="save-me"] .form-chbx::after{
+    content: "";
+    display: block;
+    position: absolute;
+    width: 16px;
+    height: 2px;
+    border-radius: 3px;
+    background: #000;
+    top:7px;
+    left: 0;
+    transform: rotate(45deg);
+}
+.login-save #save-me:checked ~ label[for="save-me"] .form-chbx::after{
+    transform: rotate(-45deg);
+}
+.close{
+	font-size: 0;
+    width: 0;
+    border: none;
+    height: 0;
+    background: transparent;
+    position: absolute;
+	top: 7px;
+	right: -40px;
+	outline: none;
+}
+.close::before, .close::after{
+	content: "";
+	display: block;
+	position: absolute;
+	width: 25px;
+	height: 5px;
+	background: #d0d0d0;
+	top: 10px;
+    right: 5px;
+	border-radius: 2px;
+	transform: rotate(45deg);
+}
+.close::after{
+	transform: rotate(-45deg);
 }
 .map{
     margin: 0 auto;
     width: 765px;
+}
+.bg-popup{
+    position: absolute;
+    top:0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.678);
 }
